--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,11 @@
-1. file upload
-2. tutorial
+1. check if pdf in folder
+2. if yes, don't prompt to upload file
+3. if no, prompt to upload file, copy file to folder etc
+4. parse that file
+5. detect year/month from pdf and json files
+6. pop-up if current months pdf not uploaded yet
+7. drop down of available pdfs?
+
+
+
+z. tutorial
