--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
-1. fix search to query new db
+✅1. fix search to query new db
 2. make drop down dynamic and query based on selected month/year
+2.1 Adjustment not detecting negatives
 3. move upload functionality into last dropdown option
 4. remove need to save pdf in project
 5. make fields/buttons disabled until able to use?
