--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,10 @@
 ✅1. fix search to query new db
-2. make drop down dynamic and query based on selected month/year
-2.1 Adjustment not detecting negatives
-3. move upload functionality into last dropdown option
-4. remove need to save pdf in project
-5. make fields/buttons disabled until able to use?
+✅2. make drop down dynamic and query based on selected month/year
+✅3. Adjustment not detecting negatives
+✅4. remove need to save pdf in project
+5. make fields/buttons disabled until able to use OR loading indicator
+6. update db if same month uploaded a second time
+✅7. formatting
+8. service worker
 
 z. tutorial
